# voicetastic-core

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Justfile  MESHCORE_INTEGRATION_EVALUATION.md  MESHCORE_VOICE_ANALYSIS.md  README.md  TODO.md  VOICE_CODE_REVIEW.md  VOICE_PROTOCOL.md
.cargo/: config.toml
.github/workflows/: ci.yml  mirror-to-gitlab.yml  release.yml
.gitlab/: changelog_config.yml
crates/voicetastic-android-bridge/: .gitignore  Cargo.toml  README.md  build.rs  uniffi.toml
crates/voicetastic-android-bridge/src/: codec2_wrapper.rs  lib.rs  mesh_service.rs  runtime.rs  smoke.rs  voicetastic.udl
crates/voicetastic-cli/: Cargo.toml  build.rs
crates/voicetastic-cli/src/: cli.rs  connect.rs  main.rs  util.rs
crates/voicetastic-cli/src/commands/: device.rs  mod.rs  scan.rs  settings.rs  text.rs  voice.rs
crates/voicetastic-core/: Cargo.toml  build.rs
crates/voicetastic-core/src/: ble.rs  error.rs  ids.rs  lib.rs  node.rs  ports.rs  radio_service.rs  serial.rs  service.rs  settings.rs  transport.rs  voice.rs
crates/voicetastic-core/src/codec/: amrnb_shim.js  amrnb_wasm.rs  c2.rs  denoise.rs  error.rs  frames.rs  imp.rs  mod.rs  opus_d.rs  opus_shim.js  opus_wasm.rs  resampler.rs
crates/voicetastic-core/src/meshtastic/: ack.rs  ble.rs  mod.rs  pairing.rs  pkc.rs  ports.rs  proto.rs  reconnect.rs  serial.rs
crates/voicetastic-core/src/meshtastic/service/: inbound.rs  mod.rs  outbound.rs  protocol.rs  types.rs  voice_tx.rs
crates/voicetastic-core/src/service/: inbound.rs  mod.rs  outbound.rs  transport.rs  types.rs  voice_tx.rs
crates/voicetastic-core/src/settings/: api.rs  data.rs  mod.rs
crates/voicetastic-core/src/voice/: assembler.rs  builder.rs  consts.rs  crypto.rs  error.rs  header.rs  mac.rs  message.rs  mod.rs  nack.rs  outgoing.rs  send_prep.rs  sender.rs  sink.rs  tx_policy.rs  tx_state.rs  types.rs
crates/voicetastic-core/src/voice/assembler/: config.rs  finalize.rs  mod.rs  state.rs
crates/voicetastic-core/tests/: codec_gaps.rs  voice_loopback.rs
crates/voicetastic-esp32-bridge/: Cargo.toml  README.md  platformio-link.py
crates/voicetastic-esp32-bridge/include/: voicetastic_core.h
crates/voicetastic-esp32-bridge/src/: lib.rs
crates/voicetastic-gui/: Cargo.toml
crates/voicetastic-gui/src/: app.rs  audio.rs  main.rs  outgoing.rs  state.rs  watchers.rs
crates/voicetastic-gui/src/ui/: chat.rs  devices.rs  mod.rs  settings.rs
crates/voicetastic-gui/src/ui/settings/: appearance.rs  bluetooth.rs  channels.rs  connection.rs  device.rs  display.rs  enums.rs  lora.rs  mod.rs  mqtt.rs  network.rs  owner.rs  position.rs  power.rs  voice.rs  widgets.rs
crates/voicetastic-proto/: Cargo.toml
crates/voicetastic-proto/src/: builder.rs  consts.rs  error.rs  header.rs  lib.rs  mac.rs  types.rs
crates/voicetastic-proto/tests/: wire_vectors.rs  wire_vectors.txt
crates/voicetastic-tokens/: Cargo.toml
crates/voicetastic-tokens/examples/: generate_palette.rs
crates/voicetastic-tokens/src/: egui_emitter.rs  lib.rs
docs/wiki/: Constants-and-Limits.md  Encryption.md  Error-Catalogue.md  Frame-Format.md  Glossary.md  Header-MAC-Future-Work.md  Home.md  Overview.md  Receiver-Guide.md  Reliability-FEC-and-NACK.md  Sender-Guide.md  Settings.md
proto/: README.md
tokens/: design.toml
