[workspace]
resolver = "2"
members = [
    "crates/voicetastic-core",
    "crates/voicetastic-cli",
    "crates/voicetastic-gui",
    "crates/voicetastic-android-bridge",
]

[workspace.package]
# Sentinel placeholder. The real version is derived at build time from the
# latest `vX.Y.Z` git tag by each binary crate's `build.rs`, and is exposed
# via `env!("VOICETASTIC_VERSION")`. CI never rewrites this string; the
# release pipeline just creates the tag.
version = "0.0.0-git"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://git.cha-sam.re/acarteron/voicetastic-desktop"

[workspace.dependencies]
voicetastic-core = { path = "crates/voicetastic-core" }

# Async runtime
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "sync", "time", "io-util", "io-std", "fs", "signal"] }
tokio-stream = "0.1.18"
futures = "0.3.32"
async-trait = "0.1.89"

# Errors / logging
thiserror = "2"
anyhow = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

# Protobuf
prost = "0.14"
prost-build = "0.14"
prost-types = "0.14"

# BLE
btleplug = "0.12"
uuid = { version = "1.23", features = ["v4"] }

zbus = { version = "5.13", default-features = false, features = ["tokio"] }

# Serial
tokio-serial = "5.4.5"

# Serde
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"

# Utility
bytes = "1.11"
hex = "0.4.3"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
parking_lot = "0.12.5"
getrandom = "0.4.2"
once_cell = "1.20"

# Voice protocol v2: FEC + authenticated encryption envelope.
reed-solomon-erasure = "6.0"
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
hkdf = "0.13.0"
sha2 = "0.11.0"

# CLI
clap = { version = "4.6", features = ["derive", "env"] }
indicatif = "0.18"

# GUI
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.34.2"

# Android UniFFI bridge
uniffi = { version = "=0.29.5" }


[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
