[workspace]
resolver = "2"
members = [
    "crates/voicetastic-proto",
    "crates/voicetastic-core",
    "crates/voicetastic-cli",
    "crates/voicetastic-gui",
    "crates/voicetastic-android-bridge",
    "crates/voicetastic-esp32-bridge",
    "crates/voicetastic-tokens",
]

[workspace.package]
# Sentinel placeholder. The real version is derived at build time from the
# latest `vX.Y.Z` git tag by each binary crate's `build.rs`, and is exposed
# via `env!("VOICETASTIC_VERSION")`. CI never rewrites this string; the
# release pipeline just creates the tag.
version = "0.0.0-git"
edition = "2024"
rust-version = "1.95"
license = "GPL-3.0-or-later"
repository = "https://github.com/voicetastic/voicetastic-core"

[workspace.dependencies]
voicetastic-core = { path = "crates/voicetastic-core" }
voicetastic-tokens = { path = "crates/voicetastic-tokens" }

# Async runtime
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "sync", "time", "io-util", "io-std", "fs", "signal"] }
tokio-stream = "0.1.18"
futures = "0.3.32"
async-trait = "0.1.89"

# Errors / logging
thiserror = "2"
anyhow = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

# Protobuf
prost = "0.14"
prost-build = "0.14"
prost-types = "0.14"

# BLE
btleplug = "0.12"
uuid = { version = "1.23", features = ["v4"] }

zbus = { version = "5.13", default-features = false, features = ["tokio"] }

# Serial
tokio-serial = "5.4.5"

# Serde
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"

# Utility
bytes = "1.11"
hex = "0.4.3"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde", "wasmbind"] }
parking_lot = "0.12.5"
getrandom = "0.4.2"
once_cell = "1.20"
# Drop-in for `std::time::Instant` / `SystemTime` that routes through
# `performance.now()` on wasm32-unknown-unknown (which otherwise emits an
# unresolvable `env.now` import). Identical to std on native.
web-time = "1"
# Pure-Rust Opus decoder. Builds for wasm32 (no C/FFI), so the browser can
# play Opus voice messages from desktop/Android. Decode-only; for encode the
# desktop path still uses audiopus.
opus-decoder = "0.1.1"
# Browser FFI for the wasm32 codec paths (currently AMR-NB).
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Voice protocol v2: FEC + authenticated encryption envelope.
reed-solomon-erasure = "6.0"
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
hkdf = "0.13.0"
hmac = "0.13.0"
sha2 = "0.11.0"

# Meshtastic PKC (PKI-encrypted direct messages) — X25519 ECDH +
# SHA-256 + AES-256-CCM, matching the firmware's `decryptCurve25519`.
# Pure Rust, no native deps.
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
aes = "0.8"
ccm = "0.5"

# CLI
clap = { version = "4.6", features = ["derive", "env"] }
indicatif = "0.18"

# GUI
eframe = { version = "0.34.3", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.34.3"

# Codec (optional at the crate level via the `codecs` feature)
opus = "0.3"
codec2 = "0.3"

# RNNoise-based noise suppression (optional via core's `denoise` feature).
# `default-features = false` to skip the bundled CLI binary's deps (clap,
# hound, dasp, ...). Pure Rust — no native deps.
nnnoiseless = { version = "0.5", default-features = false }

# Android UniFFI bridge
uniffi = { version = "=0.29.5" }


[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
