[package]
name = "voicetastic-android-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "UniFFI bridge that exposes voicetastic-core's voice protocol to Android (Kotlin)."
[lib]
# `cdylib` is the binary the NDK toolchain packages into `libvoicetastic.so`
# under `app/src/main/jniLibs/<abi>/`.
#
# `staticlib` keeps the door open for static-link-against-test-binary use.
crate-type = ["cdylib", "staticlib"]
name = "voicetastic"
[dependencies]
# Pull only the voice protocol; drop btleplug + tokio-serial which won't
# cross-compile to android targets out of the box.
voicetastic-core = { path = "../voicetastic-core", default-features = false }
uniffi = { workspace = true, features = ["cli"] }
thiserror = { workspace = true }
# PR 0: async runtime + tracing for the upcoming MeshService bridge.
# `rt-multi-thread` is required so that `MeshService::connect_with_transport`
# (which internally `tokio::spawn`s inbound/outbound/voice-tx tasks) can run
# independently of the JVM thread that called into UniFFI.
tokio = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
prost = { workspace = true }
[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
[features]
default = []
