[package]
name = "voicetastic-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Voicetastic command-line client"

[[bin]]
name = "voicetastic"
path = "src/main.rs"

[dependencies]
voicetastic-core = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
indicatif = { workspace = true }
chrono = { workspace = true }
