[package]
name = "voicetastic-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Voicetastic command-line client"
build = "build.rs"

[[bin]]
name = "voicetastic"
path = "src/main.rs"

[dependencies]
voicetastic-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
