[package]
name = "voicetastic-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared core library for voicetastic-desktop: BLE transport, Meshtastic protobuf I/O, voice protocol."

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
prost = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
getrandom = { workspace = true }

# Optional desktop transports. Off-by-default for Android / embedded
# consumers that supply their own `Transport` implementation.
btleplug = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
tokio-serial = { workspace = true, optional = true }

[features]
# Default features keep desktop (CLI/GUI) builds working without changes.
default = ["ble-btleplug", "serial-tokio"]
# BLE GATT transport via the `btleplug` crate (BlueZ on Linux, CoreBluetooth on
# macOS, WinRT on Windows). Pulls in `uuid` for the GATT characteristic IDs.
ble-btleplug = ["dep:btleplug", "dep:uuid"]
# USB-serial transport via `tokio-serial` (Unix termios / Win32 COM ports).
serial-tokio = ["dep:tokio-serial"]

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
