[package]
name = "voicetastic-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared core library for voicetastic-desktop: BLE transport, Meshtastic protobuf I/O, voice protocol."

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
prost = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
getrandom = { workspace = true }
reed-solomon-erasure = { workspace = true }
sha2 = { workspace = true }

# Optional desktop transports. Off-by-default for Android / embedded
# consumers that supply their own `Transport` implementation.
btleplug = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
tokio-serial = { workspace = true, optional = true }

# Optional codec support
opus = { workspace = true, optional = true }
codec2 = { workspace = true, optional = true }

# Optional RNNoise-based denoiser, runs on 48 kHz mono f32 frames just
# before `Encoder::push`. Pure Rust — adds no native deps.
nnnoiseless = { workspace = true, optional = true }

# Linux-only DBus client for the in-process BlueZ pairing agent. Always
# compiled on Linux (no opt-in needed); the `pairing` module is also gated
# on `feature = "ble-btleplug"` so a serial-only Linux build does not pull
# it in transitively (zbus brings ~30 crates).
[target.'cfg(target_os = "linux")'.dependencies]
zbus = { workspace = true }

[features]
# Default features keep desktop (CLI/GUI) builds working without changes.
default = ["ble-btleplug", "serial-tokio"]
# BLE GATT transport via the `btleplug` crate (BlueZ on Linux, CoreBluetooth on
# macOS, WinRT on Windows). Pulls in `uuid` for the GATT characteristic IDs.
ble-btleplug = ["dep:btleplug", "dep:uuid"]
# USB-serial transport via `tokio-serial` (Unix termios / Win32 COM ports).
serial-tokio = ["dep:tokio-serial"]
# Codec encode/decode for Opus, Codec2, and AMR-NB. Enabled by GUI's `audio`
# feature; not enabled by default so headless/embedded consumers stay lean.
codecs = ["dep:opus", "dep:codec2"]
# RNNoise-based capture-side noise suppression. Pulled in by the GUI's
# `audio` feature so the runtime toggle in voice settings actually denoises;
# without it, the toggle is a no-op (the Denoiser type is still present).
denoise = ["dep:nnnoiseless"]

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
