[package]
name = "voicetastic-esp32-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "C ABI bridge exposing voicetastic-core to the ESP32 firmware (PlatformIO / Arduino-ESP32)."

[lib]
# Static archive (.a) for the firmware linker. Slice 1 proves cross-compile +
# static link + FFI call end to end; the surface grows to the full sans-IO
# protocol once the toolchain is proven on hardware.
crate-type = ["staticlib"]

[dependencies]
# Pure-Rust subset only: no Opus (C/CMake, won't cross-compile, same blocker as
# wasm), no tokio service (the firmware owns the Meshtastic radio + audio I/O).
# codec2 is pure Rust and embeds fine.
voicetastic-core = { path = "../voicetastic-core", default-features = false, features = ["codec2"] }
