[package]
name = "voicetastic-esp32-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "no_std C ABI bridge exposing voicetastic-proto to the ESP32 firmware (PlatformIO / Arduino-ESP32)."

[lib]
# Static archive (.a) cross-compiled for xtensa-esp32s3-none-elf
# (-Zbuild-std=core,alloc) and linked into the Arduino-ESP32 firmware.
crate-type = ["staticlib"]

[dependencies]
# no_std wire protocol only. default-features=false drops host-rng/getrandom
# (the firmware injects the message id). No codec2/denoiser here - those stay
# the firmware's C libraries.
voicetastic-proto = { path = "../voicetastic-proto", default-features = false }
