[package]
name = "voicetastic-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Voicetastic desktop GUI"

[[bin]]
name = "voicetastic-gui"
path = "src/main.rs"

[features]
# Live mic capture + Opus / Codec2 encode/decode + speaker playback. On by
# default so the voice-message UI in the Chat tab works out of the box.
# Disable with `--no-default-features` for builds where libopus / ALSA aren't
# available (e.g. headless CI).
default = ["audio"]
audio = ["dep:cpal", "voicetastic-core/codecs"]

[dependencies]
voicetastic-core = { workspace = true }
tokio = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
cpal = { version = "0.16", optional = true }
